Make sure we don't stretch blog images

--- a/css/ligerbots.css
+++ b/css/ligerbots.css
@@ -166,6 +166,8 @@ body{
     margin-top: auto;
     margin-bottom: auto;
     height: 390px;
+    -o-object-fit: contain;
+    object-fit: contain;
 }
 .index-blog-text {
     height: 10em;
